<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory1</string>


    <string name="action_insert_dummy_data">Insert Dummy Data</string>


    <string name="action_delete_all_entries">Delete All Items</string>


    <string name="editor_activity_title_new_item">Add an Item</string>


    <string name="action_save">Save</string>


    <string name="action_delete">Delete</string>


    <string name="category_details">Product Details</string>


    <string name="category_supplier">Supplier</string>

    <string name="category_suppname">Supplier Name</string>

    <string name="hint_product_name">Name</string>


    <string name="hint_product_price">Price</string>


    <string name="hint_product_quantity">Quantity</string>


    <string name="category_supp_phone">Phone no</string>


    <string name="category_supp_email">Email Address</string>



</resources>
