<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_details"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />


            <EditText
                android:id="@+id/edit_product_price"
                android:hint="@string/hint_product_price"

                style="@style/EditorFieldStyle"
                android:inputType="number"/>

            <EditText
                android:id="@+id/product_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_quantity"
                android:inputType="number"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/container_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:text="@string/category_supplier"
            style="@style/CategoryStyle" />
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">




    <!-- Measurement category -->

        <!-- Label -->

        <!-- Input fields -->
            <!-- Weight field -->
            <EditText
                android:id="@+id/edit_spu_name"
                android:hint="@string/category_suppname"

                style="@style/EditorFieldStyle" />


            <EditText
                android:id="@+id/edit_spu_phone"
                android:hint="@string/category_supp_phone"
                android:inputType="number"
                style="@style/EditorFieldStyle" />
            <EditText
                android:id="@+id/edit_spu_email"
                android:hint="@string/category_supp_email"
                style="@style/EditorFieldStyle" />



    </LinearLayout>
</LinearLayout>
    </LinearLayout>
